[tool.poetry]
name = "travel-co-puzzle"
version = "0.1.0"
description = ""
authors = ["Marko Vukovic <mvukovic.cloud@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.3"
geopandas = "^0.9.0"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
